

public interface VisitorRead {
  TaskManager visit(FileManager fileManager);

}
