@startuml

title __JAVA's Class Diagram__\n

    class Clock {
        - clock : Timer
        - observable : Observable
        {static} - uniqueInstance : Clock
        {static} + getInstance()
        + stopClock()
        - Clock()
        - setTime()
        - startTick()
    }

  


    interface Element {
        {abstract} + accept()
        {abstract} + accept()
        {abstract} + print()
    }

  


    class FileManager {
        {static} + JSON_SAVED_FILE_NAME : String
        - jsonObjectRead : JSONObject
        + accept()
        + accept()
        + getJsonObjectRead()
        + print()
        + readFromJsonFile()
        + saveToJsonFile()
    }

  


    class FromJsonVisitor {
        + visit()
        - createTreeFromJsonObject()
        - stringToLocalDateTime()
    }

  


    class Interval {
        - endTime : LocalDateTime
        - inProgress : boolean
        - startTime : LocalDateTime
        + Interval()
        + accept()
        + accept()
        + getDuration()
        + getEndTime()
        + getEndTimeToString()
        + getParentTask()
        + getStartTime()
        + getStartTimeToString()
        + isInProgress()
        + print()
        + setEndTime()
        + setInProgress()
        + setStartTime()
        + stopInterval()
        + toString()
        + update()
    }

  


    class Main {
        {static} + main()
    }

  


    class PrinterVisitor {
        - STRING_ACTIVITY : String
        + PrinterVisitor()
        + print()
        + print()
        + print()
        + print()
        + stopPrinting()
        + update()
    }

  


    class Task {
        - active : boolean
        - listIntervals : List<Interval>
        + Task()
        + accept()
        + accept()
        + createInterval()
        + endInterval()
        + getDuration()
        + getEndTime()
        + getEndTimeToString()
        + getListIntervals()
        + getStartTime()
        + getStartTimeToString()
        + intervalUpdated()
        + isActive()
        + print()
        + setActive()
        + setActive()
        + setEndTime()
        + setListIntervals()
        + setStartTime()
        + toString()
        # updateParentEndTime()
    }

  


    class TaskManager {
        - active : boolean
        - trackers : List<Tracker>
        + TaskManager()
        + TaskManager()
        + accept()
        + accept()
        + addChild()
        + getDuration()
        + getEndTime()
        + getEndTimeToString()
        + getParentProject()
        + getStartTime()
        + getStartTimeToString()
        + getTrackers()
        + isActive()
        + print()
        + setActive()
        + setEndTime()
        + setStartTime()
        + setTrackers()
        # updateParentEndTime()
    }

  


    class ToJsonVisitor {
        + visit()
        + visit()
        + visit()
        + visit()
    }

  


    abstract class Tracker {
        # endTime : LocalDateTime
        # name : String
        # startTime : LocalDateTime
        + Tracker()
        + accept()
        {abstract} + getDuration()
        {abstract} + getEndTime()
        {abstract} + getEndTimeToString()
        + getName()
        {abstract} + getStartTime()
        {abstract} + getStartTimeToString()
        + print()
        {abstract} # updateParentEndTime()
    }

  


    interface Visitor {
        {abstract} + visit()
        {abstract} + visit()
        {abstract} + visit()
        {abstract} + visit()
    }

  


    interface VisitorPrint {
        {abstract} + print()
        {abstract} + print()
        {abstract} + print()
        {abstract} + print()
    }

  


    interface VisitorRead {
        {abstract} + visit()
    }

  

  Clock -up-|> java.util.Observable
  FileManager .up.|> Element
  FromJsonVisitor .up.|> VisitorRead
  Interval .up.|> Element
  Interval .up.|> java.util.Observer
  Interval o-- Task : parentTask

  PrinterVisitor .up.|> VisitorPrint
  PrinterVisitor .up.|> java.util.Observer
  PrinterVisitor o-- TaskManager : taskManager
  Task .up.|> Element
  Task -up-|> Tracker
  Task o-- TaskManager : parentProject
  TaskManager .up.|> Element
  TaskManager -up-|> Tracker
  TaskManager o-- TaskManager : parentProject
  ToJsonVisitor .up.|> Visitor
  Tracker .up.|> Element
  Tracker --* TaskManager
  Interval ----* Task

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
